attempt with axios calls

--- a/codenames/src/Components/Landing.css
+++ b/codenames/src/Components/Landing.css
@@ -28,7 +28,7 @@ html, body{
 }
 
 .Landing{
-    background-image: url(../src/Images/landing.jpg);
+    background-image: url(../../src/Images/landing.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
