--- a/codenames/src/Components/Popup.css
+++ b/codenames/src/Components/Popup.css
@@ -1,40 +1,31 @@
-
-.box{
+.popup {
     background: rgba(255, 255, 255, .2);
     border-radius: 25px;
     margin: auto;
     height: fit-content;
-    width: 300px;
+    width: 500px;
     display: flex;
     flex-direction: column;
     align-items: center;
     border: 4px solid rgb(255, 255, 255);
     padding: 30px;
+
+    
 }
 
-.btn1{
+
+.close-btn{
     text-decoration: none;
-    padding: 10px 20px;
+    padding: 6px 15px;
     font-size: 1.25rem;
     border-radius: 10px;
     background-color: rgb(129, 128, 128);
     color: rgb(255, 255, 255);
     
-
 }
 
-html, body{
-    margin: 0;
-    height: 100%;
-}
-
-.Landing{
-    background-image: url(../src/Images/landing.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100%;
-}
-
-.Codenames-title{
-    color:white
+.explanation{
+    color:white;
+    text-align: justify;
+    text-indent: 25px;
 }
