--- a/codenames/src/Components/Landing.css
+++ b/codenames/src/Components/Landing.css
@@ -1,5 +1,7 @@
 
 .game-title{
+    font-family:'Times New Roman', Times, serif;
+    font-size: 2.0em;
     margin: 10px;
     color:rgb(248, 248, 248);
     writing-mode: vertical-lr;
