--- a/codenames/src/Components/Landing.css
+++ b/codenames/src/Components/Landing.css
@@ -25,6 +25,7 @@
 .btn1{
     text-decoration: none;
     padding: 10px 20px;
+    width: 69%;
     font-size: 1.25rem;
     border-radius: 10px;
     background-color: rgb(129, 128, 128);
