--- a/codenames/src/Components/Game.css
+++ b/codenames/src/Components/Game.css
@@ -1,9 +1,11 @@
 .game{
     background-image: url(../Images/game.png);
-    display: flex;
+    display: table;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center center;
     height: 100%;
+    width: 100%;
     
 }
 
