--- a/codenames/src/Components/UserInfo.css
+++ b/codenames/src/Components/UserInfo.css
@@ -1,9 +1,11 @@
 .userInfo{
     background-image: url(../Images/userinfo.jpg);
-    display: flex;
+    display: table;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center center;
     height: 100%;
+    width: 100%;
 }
 
 .gameCode{
@@ -20,4 +22,41 @@
     color:white;
 
 }
+
+.box-userInfo{
+    background:white;
+    border-radius: 10px;
+    margin: auto;
+    height: fit-content;
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 4px solid rgb(255, 255, 255);
+    padding: 30px;
+}
+
+.prompt{
+    display: table-cell;
+    font-size:1.2em;
+    font-weight: bold;
+}
+
+::placeholder{
+    color:white;
+}
+
+.Nickname{
+    display: table-cell;
+    text-decoration: none;
+    padding: 10px 20px;
+    width: 69%;
+    font-size: 1.25rem;
+    border-radius: 10px;
+    background-color: rgb(194, 194, 194);
+    color: rgb(255, 255, 255);
+    text-align: center;
+}
+
+
 
