--- a/codenames/src/Components/UserInfo.css
+++ b/codenames/src/Components/UserInfo.css
@@ -4,6 +4,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
+    align-items: center;
     height: 100%;
     width: 100%;
 }
@@ -31,8 +32,8 @@
     width: 300px;
     display: flex;
     flex-direction: column;
-    align-items: center;
     border: 4px solid rgb(255, 255, 255);
+    align-items: center;
     padding: 30px;
 }
 
@@ -46,7 +47,7 @@
     color:white;
 }
 
-.Nickname{
+.nickname{
     display: table-cell;
     text-decoration: none;
     padding: 10px 20px;
@@ -58,5 +59,27 @@
     text-align: center;
 }
 
+.red{
+    display: inline;
+    text-decoration: none;
+    padding: 10px 20px;
+    width: 50%;
+    font-size: 1.25rem;
+    border-radius: 10px;
+    background-color: rgb(253, 63, 63);
+    color: rgb(255, 255, 255);
+    text-align: center;
+}
 
+.blue{
+    display: inline;
+    text-decoration: none;
+    padding: 10px 20px;
+    width: 50%;
+    font-size: 1.25rem;
+    border-radius: 10px;
+    background-color: rgb(87, 143, 248);
+    color: rgb(255, 255, 255);
+    text-align: center;
+}
 
