--- a/codenames/src/Components/GamePage/Game.css
+++ b/codenames/src/Components/GamePage/Game.css
@@ -8,6 +8,11 @@
     width: 100%;
     
 }
+html, body{ /* Add this to fill out the page without using px */
+    margin: 0;
+    height: 100%; 
+}
+
 
 .gameCode{
     background: rgba(255, 255, 255, .2);
@@ -21,6 +26,77 @@
     border: 4px solid rgb(255, 255, 255);
     padding: 30px;
     color:white;
-
 }
 
+.container{
+    display: flex;
+    float: left;
+}
+
+.teamInfo{
+    margin-left: 10px;
+}
+
+.redTeam{
+    background: rgb(247, 54, 54);
+    width: 210px;
+    height: fit-content;
+    border-radius: 15px;
+}
+.blueTeam{
+    background: rgb(54, 106, 247);
+    width: 210px;
+    height: fit-content;
+    border-radius: 15px;
+}
+
+.teamTitle{
+    margin-left: 10px;
+    margin-top: 15px;
+    color: black;
+    font-size: 18px;
+    font-family: 'Prosto One';
+}
+
+.teamContent{
+    margin-left: 10px;
+    margin-top: 5px;
+    color: black;
+    font-size: 14px;
+    font-family: 'Prosto One';
+}
+
+.bulletContent{
+    margin-left: 15px;
+    margin-top: 2px;
+    color: black;
+    font-size: 14px;
+    font-family: 'Prosto One';
+}
+
+.clueBody{
+    background-color: white;
+    width:fit-content;
+    border-radius: 5px;
+    margin-bottom: 40px;
+}
+
+.clue{
+    padding: 5px;
+}
+
+/*Cards Styling*/
+.card-deck{
+    height: 75%;
+    background-color:beige;
+    border-radius: 5px;
+}
+
+.card-text{
+    text-align: left;
+}
+
+.btn{
+    background-color: rgb(196, 196, 117);
+    color:black;
+}
