--- a/codenames/src/Components/GamePage/Game.css
+++ b/codenames/src/Components/GamePage/Game.css
@@ -152,7 +152,7 @@ html, body{ /* Add this to fill out the page without using px */
 
 .card-deck{
     height: 90%;
-    background-color: rgb(228, 235, 190);
+    /*background-color: rgb(228, 235, 190);*/
     border-radius: 10px;
     width: 105%;
 }
