--- a/codenames/src/Components/GamePage/Operatives/OperativesGame.css
+++ b/codenames/src/Components/GamePage/Operatives/OperativesGame.css
@@ -1,4 +1,4 @@
-.game{
+#game{
     background-image: url(../../../Images/game.png);
     display: table;
     background-repeat: no-repeat;
@@ -148,9 +148,34 @@ html, body{ /* Add this to fill out the page without using px */
     margin: 10%;
 } */
 
-.card-deck{
+.card-deck{ /* Not used */
     height: 90%;
     background-color: rgb(228, 235, 190);
+    border-radius: 10px;
+    width: 105%;
+}
+.card-deck-neutral{
+    height: 90%;
+    background-color: rgb(228, 235, 190);
+    border-radius: 10px;
+    width: 105%;
+}
+.card-deck-black{
+    height: 90%;
+    background-color: rgb(0, 0, 0);
+    color: white;
+    border-radius: 10px;
+    width: 105%;
+}
+.card-deck-blue{
+    height: 90%;
+    background-color: rgb(87, 143, 248);
+    border-radius: 10px;
+    width: 105%;
+}
+.card-deck-red{
+    height: 90%;
+    background-color: rgb(253, 63, 63);
     border-radius: 10px;
     width: 105%;
 }
@@ -165,4 +190,3 @@ html, body{ /* Add this to fill out the page without using px */
     color:black;
     border: 4px solid rgb(228, 235, 190);
 }
-
