--- a/codenames/src/Components/GamePage/Operatives/OperativesGame.css
+++ b/codenames/src/Components/GamePage/Operatives/OperativesGame.css
@@ -1,3 +1,4 @@
+/* Not used, use Game.css instead for both spymaster and operatives */
 #game{
     background-image: url(../../../Images/game.png);
     display: table;
