--- a/codenames/src/Components/GamePage/Game.css
+++ b/codenames/src/Components/GamePage/Game.css
@@ -1,5 +1,4 @@
-/* Not used in Game.js but I'm keeping this file for now in case it's needed */
-
+/* Used by Spymaster and Operatives pages instead of each page having their own .css */
 .game{
     background-image: url(../../Images/game.png);
     display: table;
@@ -59,7 +58,7 @@ html, body{ /* Add this to fill out the page without using px */
     color: black;
     font-size: 22px;
     font-weight: bold;
-    font-family: "FreeMono", monospace; /* Changed from Prosto One, I'm not sure if css supports that font? */
+    font-family: "FreeMono", monospace; /* Changed from Prosto One */
     float: left;
 }
 
@@ -150,9 +149,60 @@ html, body{ /* Add this to fill out the page without using px */
     margin: 10%;
 } */
 
-.card-deck{
+.card-deck{ /* Not used */
     height: 90%;
-    /*background-color: rgb(228, 235, 190);*/
+    background-color: rgb(228, 235, 190);
+    border-radius: 10px;
+    width: 105%;
+}
+.card-deck-neutral{
+    height: 90%;
+    background-color: rgb(228, 235, 190);
+    border-radius: 10px;
+    width: 105%;
+}
+.card-deck-black{
+    height: 90%;
+    background-color: rgb(0, 0, 0);
+    color: white;
+    border-radius: 10px;
+    width: 105%;
+}
+.card-deck-blue{
+    height: 90%;
+    background-color: rgb(87, 143, 248);
+    border-radius: 10px;
+    width: 105%;
+}
+.card-deck-red{
+    height: 90%;
+    background-color: rgb(253, 63, 63);
+    border-radius: 10px;
+    width: 105%;
+}
+
+.card-deck-muted-neutral{
+    height: 90%;
+    background-color: rgb(228, 235, 190, 0.33);
+    border-radius: 10px;
+    width: 105%;
+}
+.card-deck-muted-black{
+    height: 90%;
+    background-color: rgb(0, 0, 0, 0.33);
+    color: white;
+    border-radius: 10px;
+    width: 105%;
+}
+.card-deck-muted-blue{
+    height: 90%;
+    background-color: rgb(87, 143, 248, 0.33);
+    border-radius: 10px;
+    width: 105%;
+}
+.card-deck-muted-red{
+    height: 90%;
+    background-color: rgba(253, 63, 63, 0.33);
     border-radius: 10px;
     width: 105%;
 }
