--- a/codenames/src/Components/GamePage/Card/Card.css
+++ b/codenames/src/Components/GamePage/Card/Card.css
@@ -16,3 +16,63 @@
     width: 105%;
 }
 
+
+
+
+.card-deck-C{
+    height: 90%;
+    background-color: rgb(228, 235, 190);
+    border-radius: 10px;
+    width: 105%;
+}
+.card-deck-R{
+    height: 90%;
+    background-color: rgb(253, 63, 63);
+    border-radius: 10px;
+    width: 105%;
+}
+.card-deck-B{
+    height: 90%;
+    background-color: rgb(87, 143, 248);
+    border-radius: 10px;
+    width: 105%;
+}
+.card-deck-A{
+    height: 90%;
+    background-color: rgb(0, 0, 0);
+    color: white;
+    border-radius: 10px;
+    width: 105%;
+}
+.card-deck-D{
+    height: 90%;
+    background-color: rgb(228, 235, 190);
+    border-radius: 10px;
+    width: 105%;
+}
+
+.card-deck-revealed-bystander{
+    height: 90%;
+    background-color: rgb(228, 235, 190, .33);
+    border-radius: 10px;
+    width: 105%;
+}
+.card-deck-revealed-blue{
+    height: 90%;
+    background-color: rgb(87, 143, 248, .33);
+    border-radius: 10px;
+    width: 105%;
+}
+.card-deck-revealed-red{
+    height: 90%;
+    background-color: rgb(253, 63, 63, .33);
+    border-radius: 10px;
+    width: 105%;
+}
+.card-deck-revealed-assassin{
+    height: 90%;
+    background-color: rgb(0, 0, 0, .33);
+    color: white;
+    border-radius: 10px;
+    width: 105%;
+}
