--- a/codenames/src/Components/GamePage/Spymasters/SpymastersGame.css
+++ b/codenames/src/Components/GamePage/Spymasters/SpymastersGame.css
@@ -1,3 +1,15 @@
+:root {
+    --color-red: #ec1840;
+    --color-purple: #7a18ec;
+    --color-white: #fff;
+    --color-black-1: #111;
+    --color-black-2: #222;
+    --color-black-3: #444;
+    --speed-normal: 0.5s;
+    --speed-fast: 0.8s;
+
+}
+
 .game{
     background-image: url(../../../Images/game.png);
     display: table;
@@ -166,3 +178,235 @@ html, body{ /* Add this to fill out the page without using px */
     color:black;
     border: 4px solid rgb(228, 235, 190);
 }
+
+/*-----------------------------STATUS BOX-----------------------------------------*/
+.winBox{
+    background: black;
+    font-family: "FreeMono", monospace;
+    border-radius: 25px;
+    align-items: center;
+    /* border: 4px solid rgb(255, 255, 255); */
+    padding: 30px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-20%, -20%);
+
+    --bs-gutter-x: 1.5rem;
+    --bs-gutter-y: 0;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: calc(var(--bs-gutter-y) * -1);
+    margin-right: calc(var(--bs-gutter-x) * -.5);
+    margin-left: calc(var(--bs-gutter-x) * -.5);
+
+    height: 50%;
+
+    
+}
+
+.Status {
+    position: relative;
+    font-family: "FreeMono", monospace;
+    text-transform: uppercase;
+    font-size: 2em;
+    font-weight: 600;
+    letter-spacing: 4px;
+    -webkit-text-stroke: 2px rgb(0, 0, 0);
+
+
+    overflow: hidden;
+    background: linear-gradient(90deg, #000, #fff, #000);
+    background-repeat: no-repeat;
+    background-size: 80%;
+    animation: animate 3s linear infinite;
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: rgba(255, 255, 255, 0);
+  }
+  
+  @keyframes animate {
+    0% {
+      background-position: -500%;
+    }
+    100% {
+      background-position: 500%;
+    }
+  }
+
+
+/*-----------------------------WAITING SCREEN CODE*-----------------------------------------*/
+.waitingScreen{
+    /* background-image: url(../../../Images/game.png);
+    display: table; 
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center; */
+    width: 100vw;
+    height: 100vh;
+    background: #000000;
+}
+
+.waitingContainer{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
+}
+.spinner {
+    position: relative;
+    margin: auto;
+    box-sizing: border-box;
+    background-clip: padding-box;
+    width: 200px;
+    height: 200px;
+    border-radius: 100px;
+    border: 4px solid rgba(255, 255, 255, 0.1);
+    -webkit-mask: linear-gradient(rgba(0, 0, 0, 0.1), #000000 90%);
+    mask:linear-gradient(rgba(0, 0, 0, 0.1), #000000 90%);;
+    transform-origin: 50% 60%;
+    transform: perspective(200px) rotateX(66deg);
+    animation: spinner-wiggle 1.2s infinite;
+  }
+  .spinner:before,
+  .spinner:after {
+    content: "";
+    position: absolute;
+    margin: -4px;
+    box-sizing: inherit;
+    width: inherit;
+    height: inherit;
+    border-radius: inherit;
+    opacity: .05;
+    border: inherit;
+    border-color: transparent;
+    animation: spinner-spin 1.2s cubic-bezier(0.6, 0.2, 0, 0.8) infinite, spinner-fade 1.2s linear infinite;
+  }
+  
+  .spinner:before {
+    border-top-color: #2E67F8;
+  }
+  
+  .spinner:after {
+    border-top-color: #EB212E;
+    animation-delay: 0.3s;
+  }
+  
+  @keyframes spinner-spin {
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  @keyframes spinner-fade {
+    20% {
+      opacity: .1;
+    }
+    40% {
+      opacity: 1;
+    }
+    60% {
+      opacity: .1;
+    }
+  }
+
+.waitingText{
+    margin-top:20px;
+    font-family: "FreeMono", monospace;
+    /* color: #fff; */
+    color: #121212;
+    text-transform: uppercase;
+    font-size: 2.5em;
+    font-weight: 600;
+    -webkit-text-stroke: 2px rgb(255, 255, 255);
+    text-align: center;
+}
+
+.one {
+    opacity: 0;
+    -webkit-animation: dot 2s infinite;
+    -webkit-animation-delay: 0.0s;
+    animation: dot 2s infinite;
+    animation-delay: 0.0s;
+}
+
+.two {
+    opacity: 0;
+    -webkit-animation: dot 2s infinite;
+    -webkit-animation-delay: 0.5s;
+    animation: dot 2s infinite;
+    animation-delay: 0.5s;
+}
+
+.three {
+    opacity: 0;
+    -webkit-animation: dot 2s infinite;
+    -webkit-animation-delay: 1s;
+    animation: dot 2s infinite;
+    animation-delay: 1s;
+}
+
+@-webkit-keyframes dot {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes dot {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.waitingButton{
+    text-transform: uppercase;
+    margin-top:8%;
+    width: 200px;
+    height: 50px;
+    font-size: 18px;
+    font-family: "FreeMono", monospace;
+    border: 4px solid;
+    border-color: #d3b8be;
+    background:transparent;
+    color:white;
+    text-align: center;
+    position: relative;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
+    letter-spacing: 2.5px;
+    box-shadow: 6px 6px 0px #afeaee;
+    outline: transparent;
+  }
+.waitingButton:active:after {
+    position: absolute;
+    border-radius: 4em;
+    left: 0;
+    top:0;
+    opacity: 1;
+    transition: 0s;
+  }
+  
+.waitingButton:active {
+    top: 1px;
+  }
+  
+.waitingButton:hover {
+    transition-duration: 0.1s;
+    color:rgba(255, 255, 255, 0.459);
+  
+}
+  
