Pulled from recent main and added previous styling to that. Styled the cards so that the whole card will change color when clicked. Spymaster's color's opacity is different when an operative guesses. The checkboxes are also different style wise. Still have to style the cluebox

--- a/codenames/src/Components/GamePage/Row/Row.css
+++ b/codenames/src/Components/GamePage/Row/Row.css
@@ -1,6 +1,6 @@
-.card-deck{
+/* .card-style{
     height: 90%;
     background-color: rgb(228, 235, 190);
     border-radius: 10px;
     width: 105%;
-}
+} */
