--- a/codenames/src/Components/UserInfo/UserInfo.css
+++ b/codenames/src/Components/UserInfo/UserInfo.css
@@ -1,5 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;600&display=swap');
+
+* {
+    font-family: 'Roboto Mono', monospace;
+}
+
 .userInfo{
-    background-image: url(../../Images/userinfo.jpg);
+    background-image: url(../../Images/neon.jpeg);
     display: table;
     background-repeat: no-repeat;
     background-size: cover;
@@ -15,36 +22,23 @@ html, body{ /* Add this to fill out the page without using px */
 }
 
 .gameCode{
-    background: rgba(255, 255, 255, 0.2);
+    background: rgba(255, 255, 255, 0.7);
     border-radius: 25px;
     margin-left: 80%;
     height: fit-content;
+    font-family: 'Roboto Mono', monospace;
+    font-weight: 600;
     width: 250px;
     display: flex;
     flex-direction: row;
     align-items: center;
     border: 4px solid rgb(255, 255, 255);
     padding: 30px;
-    color:white;
+    color:black;
 
 }
 
-.box-userInfo-left{
-    background:white;
-    border-radius: 10px;
-    margin: auto;
-    height: fit-content; /* Changed from fit-content */
-    width: 300px;
-    display: flex;
-    flex-direction: column;
-    border: 4px solid rgb(255, 255, 255);
-    align-items: center;
-    padding: 30px;
-    float: left; /* Put on left side of form */
-    margin-left: 10%; /* Add a margin of blank space to the left side, using percentage of the page */
-}
-
-.box-userInfo-right{
+.box-userName{
     background:white;
     border-radius: 10px;
     margin: auto;
@@ -55,7 +49,37 @@ html, body{ /* Add this to fill out the page without using px */
     border: 4px solid rgb(255, 255, 255);
     align-items: center;
     padding: 30px;
-    float: right; /* Put on right side of form */
+    float: left; /* Put on left side of form */
+    margin-left: 10%; /* Add a margin of blank space to the left side, using percentage of the page */
+}
+
+.box-userTeam{
+    background:white;
+    border-radius: 10px;
+    margin: auto;
+    height: 250px; /* Changed from fit-content */
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    border: 4px solid rgb(255, 255, 255);
+    align-items: center;
+    padding: 30px;
+    float: left; 
+    margin-left: 5%;
+}
+
+.box-userTask{
+    background:white;
+    border-radius: 10px;
+    margin: auto;
+    height: 250px; /* Changed from fit-content */
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    border: 4px solid rgb(255, 255, 255);
+    align-items: center;
+    padding: 30px;
+    float: right; 
     margin-right: 10%; /* Add margin of blank space to right side, using percentage of the page */
 }
 
@@ -73,8 +97,13 @@ html, body{ /* Add this to fill out the page without using px */
     padding: 10px 20px;
     font-size: 1.25rem;
     border-radius: 10px;
-    background-color: rgba(129, 128, 128, 0.5);
+    background-color: rgba(129, 128, 128, 1.0);
     color: rgb(255, 255, 255);
+}
+
+.startBtn:hover{
+    background-color: rgb(204, 202, 80);
+    transition-duration: 1s;
 }
 
 .prompt{
@@ -109,6 +138,7 @@ html, body{ /* Add this to fill out the page without using px */
     background-color: rgb(253, 63, 63);
     color: rgb(255, 255, 255);
     text-align: center;
+    margin-top: 10px;
 }
 
 .blue{
@@ -121,6 +151,7 @@ html, body{ /* Add this to fill out the page without using px */
     background-color: rgb(87, 143, 248);
     color: rgb(255, 255, 255);
     text-align: center;
+    margin-top: -10px;
 }
 
 .task{
@@ -133,5 +164,6 @@ html, body{ /* Add this to fill out the page without using px */
     background-color: rgb(194, 194, 194);
     color: rgb(255, 255, 255);
     text-align: center;
+    margin-top: 10px;
 }
 
