--- a/codenames/src/Components/GamePage/Operatives/OperativesGame.css
+++ b/codenames/src/Components/GamePage/Operatives/OperativesGame.css
@@ -4,8 +4,8 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    height: 100%;
-    width: 100%;
+    width: 100vw;
+    height: 100vh;
     
 }
 html, body{ /* Add this to fill out the page without using px */
@@ -99,91 +99,195 @@ html, body{ /* Add this to fill out the page without using px */
     color: black;
 }
 
-.spymasterClue{
-    width: 80%;
-    height: 100%;
-    border: 15px black;
-    position: relative;
-    background-color: rgba(255,255,255);
-}
 
-.spymasterClue input {
-    float: left;
-    width: 80%;
-    height: 100%;
-    position: relative;
-    padding: 0px 16px;
-    border-radius: 5px;
-    color: black;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: normal;
-    background-color: transparent;
-}
-
-.counter{
-    background-color: gray;
-    float: right;
-    width: 20%;
-    height: 100%;
-}
-
-.counter h6{
-    font-size: 20px;
-    text-align: left;
-}
-.counter button{
-    float: right;
-}
-
-/*Cards Styling*/
-
-/*.card-style{ /* Not used yet still in progress, trying to get that stylish inner border like in figma 
-    position: relative;
-    background: rgba(255, 255, 255, .0);
-    border: 3px solid rgb(186, 196, 129);
-    border-radius: 12px;
-    height: 30%;
-    width: 80%;
-    margin: 10%;
-} */
-
-.card-deck{
-    height: 90%;
-    background-color: rgb(228, 235, 190);
-    border-radius: 10px;
-    width: 105%;
-}
-
-.card-text{
-    text-align: left;
-    font-family: "FreeMono", monospace;
-}
-
-.btn{
-    background-color: rgb(196, 205, 117);
-    color:black;
-    border: 4px solid rgb(228, 235, 190);
-}
-
-/* .winBox{
-    background-color: white;
-    font-family: "FreeMono", monospace;
-    display:center;
-} */
+/*-----------------------------STATUS BOX-----------------------------------------*/
 .winBox{
-    background:  white;
+    background: black;
     font-family: "FreeMono", monospace;
     border-radius: 25px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
     align-items: center;
-    border: 4px solid rgb(255, 255, 255);
+    /* border: 4px solid rgb(255, 255, 255); */
     padding: 30px;
-    background-size: cover;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-20%, -20%);
+
+    --bs-gutter-x: 1.5rem;
+    --bs-gutter-y: 0;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: calc(var(--bs-gutter-y) * -1);
+    margin-right: calc(var(--bs-gutter-x) * -.5);
+    margin-left: calc(var(--bs-gutter-x) * -.5);
+
+    height: 50%;
+
+    
 }
 
-.popContainer{
-    height:530px;
+.Status {
+    position: relative;
+    font-family: "FreeMono", monospace;
+    text-transform: uppercase;
+    font-size: 2em;
+    font-weight: 600;
+    letter-spacing: 4px;
+    -webkit-text-stroke: 2px rgb(0, 0, 0);
+
+
+    overflow: hidden;
+    background: linear-gradient(90deg, #000, #fff, #000);
+    background-repeat: no-repeat;
+    background-size: 80%;
+    animation: animate 3s linear infinite;
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: rgba(255, 255, 255, 0);
+  }
+  
+  @keyframes animate {
+    0% {
+      background-position: -500%;
+    }
+    100% {
+      background-position: 500%;
+    }
+  }
+
+
+
+/*-----------------------------WAITING SCREEN CODE-----------------------------------------*/
+.waitingScreen{
+    /* background-image: url(../../../Images/game.png);
+    display: table; 
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center; */
+    width: 100vw;
+    height: 100vh;
+    background: #000000;
+}
+
+.waitingContainer{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
+}
+.spinner {
+    position: relative;
+    margin: auto;
+    box-sizing: border-box;
+    background-clip: padding-box;
+    width: 200px;
+    height: 200px;
+    border-radius: 100px;
+    border: 4px solid rgba(255, 255, 255, 0.1);
+    -webkit-mask: linear-gradient(rgba(0, 0, 0, 0.1), #000000 90%);
+    mask:linear-gradient(rgba(0, 0, 0, 0.1), #000000 90%);;
+    transform-origin: 50% 60%;
+    transform: perspective(200px) rotateX(66deg);
+    animation: spinner-wiggle 1.2s infinite;
+  }
+  .spinner:before,
+  .spinner:after {
+    content: "";
+    position: absolute;
+    margin: -4px;
+    box-sizing: inherit;
+    width: inherit;
+    height: inherit;
+    border-radius: inherit;
+    opacity: .05;
+    border: inherit;
+    border-color: transparent;
+    animation: spinner-spin 1.2s cubic-bezier(0.6, 0.2, 0, 0.8) infinite, spinner-fade 1.2s linear infinite;
+  }
+  
+  .spinner:before {
+    border-top-color: #2E67F8;
+  }
+  
+  .spinner:after {
+    border-top-color: #EB212E;
+    animation-delay: 0.3s;
+  }
+  
+  @keyframes spinner-spin {
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  @keyframes spinner-fade {
+    20% {
+      opacity: .1;
+    }
+    40% {
+      opacity: 1;
+    }
+    60% {
+      opacity: .1;
+    }
+  }
+
+.waitingText{
+    margin-top:20px;
+    font-family: "FreeMono", monospace;
+    /* color: #fff; */
+    color: #121212;
+    text-transform: uppercase;
+    font-size: 2.5em;
+    font-weight: 600;
+    -webkit-text-stroke: 2px rgb(255, 255, 255);
+    text-align: center;
+}
+
+.one {
+    opacity: 0;
+    -webkit-animation: dot 2s infinite;
+    -webkit-animation-delay: 0.0s;
+    animation: dot 2s infinite;
+    animation-delay: 0.0s;
+}
+
+.two {
+    opacity: 0;
+    -webkit-animation: dot 2s infinite;
+    -webkit-animation-delay: 0.5s;
+    animation: dot 2s infinite;
+    animation-delay: 0.5s;
+}
+
+.three {
+    opacity: 0;
+    -webkit-animation: dot 2s infinite;
+    -webkit-animation-delay: 1s;
+    animation: dot 2s infinite;
+    animation-delay: 1s;
+}
+
+@-webkit-keyframes dot {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes dot {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
