--- a/codenames/src/Components/UserInfo/UserInfo.css
+++ b/codenames/src/Components/UserInfo/UserInfo.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;600&display=swap');
 
 * {
-    font-family: 'Roboto Mono', monospace;
+    font-family: "FreeMono", monospace;
 }
 
 .userInfo{
