centered landing page box, fixed card css

--- a/codenames/src/Components/GamePage/Card/Card.css
+++ b/codenames/src/Components/GamePage/Card/Card.css
@@ -78,13 +78,12 @@ input[type="checkbox"] {
     
 }
 
-.card-deck:hover,
+/* .card-deck:hover,
 .card-deck:focus,
 .card-deck:active {
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
-  
-}
+} */
 
 .card-deck-C{
     height: 90%;
