--- a/codenames/src/Components/GamePage/Spymasters/SpymastersGame.css
+++ b/codenames/src/Components/GamePage/Spymasters/SpymastersGame.css
@@ -117,7 +117,7 @@ html, body{ /* Add this to fill out the page without using px */
 }
 
 .clueBody{
-    background-color: white;
+    background-color: transparent;
     width:fit-content;
     border-radius: 5px;
     margin-bottom: 25px;
@@ -128,22 +128,21 @@ html, body{ /* Add this to fill out the page without using px */
     color: black;
 }
 
-.spymasterClue{
-    width: 80%;
+.col-md-12 form{
+    width: 62%;
     height: 100%;
     margin-bottom:10px;
-    background:transparent;
+    background: transparent;
 }
 
-
 .spymasterClue input {
-    float: left;
+    /* float: left; */
     width: 80%;
     height: 100%;
     position: relative;
     padding: 0px 16px;
     border-radius: 5px;
-    color: white;
+    color: black;
     font-size: 18px;
     font-weight: 400;
     line-height: normal;
@@ -151,25 +150,44 @@ html, body{ /* Add this to fill out the page without using px */
     transform: translateY(8px);
 }
 
+#clueTextBox {
+    background-color: rgba(255,255,255,0.75);
+    height: 40px;
+    width: 400px
+}
+
+#clueSubmissionButton {
+    color: white;
+    height: 50px;
+    width: 520px;
+    margin-left: 8px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: rgb(204, 202, 80);;
+} 
+
+#clueSubmissionButton:hover {
+    background-color: rgba(204, 202, 80, 0.7);
+    transition-duration: 0.7s;
+}
+
 .clueInput{
     margin: 5px;
 }
 .clueContainer{
-    background-color: yellow;
+    background-color: transparent;
     border-radius: 5px;
     border-style: solid;
     border-width: 1px;
     position: relative;
-    /* transform:translateX(650px); */
     font-size:18px;
     transform:translate(610px, -20px)
 }
 
-
-
 .counter{
-    background-color: rgba(128, 128, 128, 0.813);
-    /* float: right; */
+    /* margin: 20px; */
+    margin-top: 8px;
+    background-color: rgba(255,255,255,0.75);
     width: 20%;
     height: 40px;
     transform:translateX(5%);
@@ -186,7 +204,7 @@ html, body{ /* Add this to fill out the page without using px */
     /* text-align: center; */
 }
 .counter button{
-    float: right;
+    /* float: right; */
     width: 25px;
     margin: 5px;
 
