--- a/codenames/src/Components/LandingPage/Landing.css
+++ b/codenames/src/Components/LandingPage/Landing.css
@@ -2,12 +2,15 @@
     font-family:'Times New Roman', Times, serif;
     font-size: 2.0em;
     margin: 10px;
+    z-index: 0;
+    height: fit-content;
     color:rgb(248, 248, 248);
     writing-mode: vertical-lr;
     text-orientation:upright;
 }
 
 .box{
+    z-index: 10;
     background: rgba(255, 255, 255, .2);
     border-radius: 25px;
     margin: auto;
@@ -18,9 +21,9 @@
     align-items: center;
     border: 4px solid rgb(255, 255, 255);
     padding: 30px;
-    
+    /* position: absolute; */
+    /* margin-left: 50%; */
 }
-
 .btn1 {
     text-decoration: none;
     padding: 10px 20px;
@@ -43,6 +46,16 @@ html, body{
     
 }
 
+#initial-info {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    background-color: transparent;
+    align-items: center;
+    /* text-align: center; */
+}
+
 .Landing{
     background-image: url(../../Images/neon.jpeg);
     display:flex;
@@ -51,10 +64,9 @@ html, body{
     background-position: center center;
     height: 100%;
     width: 100%;
-    text-align: left;
+    /* text-align: center; */
     
 }
-
 
 .explanation{
     color:rgb(255, 255, 255);
